fixtures/invalid/mixin-arguments.scl
@validMixin($arg1,$arg2)
    output = $arg1

validMixin("1","2","3")
